--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,15 @@
+# Whaling Data Pipeline - Dependencies
+
+# Core data processing
+pandas>=2.0.0
+numpy>=1.24.0
+pyarrow>=14.0.0
+
+# HTTP requests for data download
+requests>=2.28.0
+
+# Testing
 pytest>=7.0.0
+
+# Optional: Record linkage
+# recordlinkage>=0.15  # Uncomment if using advanced linkage features
