--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,14 @@ requests>=2.28.0
 # Testing
 pytest>=7.0.0
 
+# Compass pipeline
+scipy>=1.10.0
+scikit-learn>=1.2.0
+pyproj>=3.4.0
+hmmlearn>=0.3.0
+
 # Optional: Record linkage
 # recordlinkage>=0.15  # Uncomment if using advanced linkage features
+
+# Optional: Compass embedding
+# torch>=2.0.0  # Uncomment for self-supervised embedding step
